# micrograd-cpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp
micrograd/: engine.cpp  engine.h  nn.cpp  nn.h
tests/: engine_unittest.cpp  engine_unittest.h
